--- a/index.Rmd
+++ b/index.Rmd
@@ -156,3 +156,25 @@ print_section(position_data, 'industry_positions')
 <br>
 <br>
 <br>
+
+
+
+```{r}
+if(PDF_EXPORT){
+  cat("
+  
+Links {data-icon=link}
+--------------------------------------------------------------------------------
+
+<br>
+
+
+")
+  
+  walk2(links, 1:length(links), function(link, index){
+    print(glue('{index}. {link}'))
+  })
+}
+```
+
+
