fixing index and resume

--- a/resume.Rmd
+++ b/resume.Rmd
@@ -139,6 +139,6 @@ Selected Positions {data-icon=suitcase}
 --------------------------------------------------------------------------------
 
 ```{r}
-position_data %>% print_section('positions')
+# position_data %>% print_section('positions')
 ```
 
